# chatik

./: .env.example  .gitignore  Cargo.toml  README.md  rustfmt.toml
.sqlx/: query-054292778f6b8579971b85266f473c647777f4e218137a892221c20d3016a6ec.json  query-0b6247863701362ad2a0dfef7d70735b410d98c7bc2ddd73e5fef30176eaabe9.json  query-10643b81461c6c0c4f70b524ffd3c424d1dda79f0b2b6c78acda324e8706f45b.json  query-2731097e0865ed2c18f48a0229a0f5f89544c567aaf672f6ff5cffac2fa58a22.json  query-350b0f51ddb3f076416344b4009746c0a331cf99cec32678da9c442c951fca7d.json  query-3c4fb214380b4a0a378f895741b10dec5b81c2e1a032b7bfd75234887a4963e3.json  query-472c7439c47852c12911fc14004654fa876d9825fd40f7f69d01281078de8b0f.json  query-5c26dd0d908edccc3c69db3bebb6cd002124d8c4091d7fe5dc6a86457b7e1beb.json  query-7702a4cb1af83ac84af34b2e0a5093a20346f62578b782e229169a67ba054df0.json  query-7ae9cdaa2bd1e124551ac45a9b6386664c7e5bcbaf5807816cda37fdbac34966.json  query-7eec04fadb3e9b5dcd7f1431bffe0d57690135ced0afac617127b13c0660050f.json  query-886f7746fd9c93bf246fee5629a26e8d700a1d3c96a72075c17881c71a6dde0f.json  query-92ec7d15a0652633413cfda5d6f01785fc5caf9a0707d20b376496416b7be4f2.json  query-9a52d6c7ca5098ff6a04350a297073b3a5807719922879db86913f1bc87a6afb.json  query-a7da26ab1348cd70027e19dc9e49edc9a1d82133343b144a642d93029a0ae1d4.json  query-bcf49171cc8afc2b78fcec6713a615741d8bfbc35b11ca33338bff2c6de1bfde.json  query-bff809bd09ffd04effa6dd62415195ad7b6413116182b1641e44ef05ce716e8b.json  query-d6ff35f7ddb62dd9a31fd9c0563184c53bfe14d189eed3e1a52c20f16d7ac126.json  (+1 more)
migrations/: 20240815094358_app.sql
(+19 files in other folders)
