[package]
name = "chatik"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
clap = { version = "4.5.15", features = ["derive", "env"] }
dotenvy = "0.15.7"
env_logger = "0.11.5"
log = "0.4.22"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.125"
socketioxide = "0.14.0"
tokio = { version = "1.39.2", features = ["full"] }
tower-http = { version = "0.5.2", features = ["fs"] }
sqlx = { version = "0.8.0", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde"] }
bcrypt = "0.15.1"
thiserror = "1.0.63"
uuid = { version = "1.10.0", features = ["v4", "serde"] }
rand = "0.8.5"
aes-gcm = "0.10.3"
hex = "0.4.3"

